fix broken homepage layout on narrow screen after instagram link addition
after #14919

--- a/ui/lobby/css/_about.scss
+++ b/ui/lobby/css/_about.scss
@@ -13,7 +13,7 @@
     white-space: nowrap;
 
     @media (any-pointer: coarse) {
-      padding: 0.5em 0.7em;
+      padding: 0.5em;
     }
 
     @include transition(color);
@@ -25,7 +25,7 @@
 }
 
 .connect-links {
-  display: flex;
+  @extend %flex-center;
   justify-content: center;
   flex: 1 0 100%;
   margin-top: 0.5em;
